--- a/style/style.css
+++ b/style/style.css
@@ -10,15 +10,15 @@ body {
     padding: 0;
     box-sizing: border-box;
     list-style-type: none;
-    background-color: #9792e4;
+    background-color: #2415f2;
 }
 
 #container {
     text-align: center;
 
-    margin: 40px;
+    margin: auto;
     background-color: #0084fd;
-    width: 100%;
+    width: 600px;
     height: 300px;
     border-radius: 5px;
     border: 1px solid darkblue;
